examples/pass/affine/affine_wrapper.dew
// expect: 42
// Affine(T) wrapper from stdlib: use once, consume via field access.
def main = fn {
  def a = Affine { data: 42 };
  a.data -> stdout;
};
